renamed trader example project name.